# notionflow

./: .env.example  .gitignore  CLAUDE.md  HANDOFF.md  IMPROVEMENT_PLAN.md  docker-compose.yml  package.json  pnpm-lock.yaml
.omc/: project-memory.json
.omc/sessions/: c6d13621-b462-4261-80f5-361a3d4cd8da.json
.omc/state/: agent-replay-c1239abb-3b14-4df5-b1b6-33bcf405f0a8.jsonl  agent-replay-c6d13621-b462-4261-80f5-361a3d4cd8da.jsonl  hud-state.json  last-tool-error.json  subagent-tracking.json
apps/ai/: Dockerfile  pyproject.toml
apps/ai/.omc/sessions/: c1239abb-3b14-4df5-b1b6-33bcf405f0a8.json
apps/ai/.omc/state/: agent-replay-c1239abb-3b14-4df5-b1b6-33bcf405f0a8.jsonl  hud-state.json  last-tool-error.json
apps/ai/src/: main.py
apps/ai/src/jobs/: recluster.py  report.py  scheduler.py
apps/ai/src/models/: schemas.py
apps/ai/src/routers/: cluster.py  embed.py  process.py  project.py  report.py  summarize.py  tag.py
apps/ai/src/services/: callback.py  classifier.py  clustering.py  embedding.py  entity_extractor.py  keyword.py  project_matcher.py  status_detector.py  summarizer.py  todo_extractor.py
apps/web/: Dockerfile  drizzle.config.ts  next.config.mjs  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/.omc/: project-memory.json
apps/web/.omc/state/: hud-state.json  last-tool-error.json  (+3 more)
apps/web/drizzle/: 0000_dear_lyja.sql  0001_fat_sunset_bain.sql  0002_red_vision.sql  0003_big_iceman.sql  0004_square_vindicator.sql  0005_magenta_silverclaw.sql  0006_fts5_pages.sql
apps/web/src/: instrumentation.ts  middleware.ts
(+87 files in other folders)
