[project]
name = "notionflow-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sentence-transformers>=3.3.0",
    "yake>=0.4.8",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "hdbscan>=0.8.39",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["src"]
